# Toolchain-DataSynth

./: .gitignore  README.md  chain_tool.py  pyproject.toml
configs/: llm.toml  llm_manager.env.example  mock.toml  smoke_mineru.toml  smoke_mineru_concurrent.toml  smoke_mineru_full_concurrent.toml  smoke_mineru_parser_concurrent.toml  w2_demo.toml
configs/prompts/: chem_qa.txt  general_qa.txt  simple_qa.txt
docker/: README.md
docker/mineru-gpu/: README.md  compose.yaml
docs/: AGENT_READY_ARCHITECTURE.md  ARCHITECTURE.md  CONTRIBUTING.md  HANDOFF_DETAILED.md  MINERU_DOCKER_COMPONENT.md  QUICKSTART.md  W2_MINIMUM_SCOPE.md
scripts/: clear-all.sh  git-push.sh  minerU.py  mineru_api_parse.sh  mineru_api_start.sh  mineru_api_stop.sh  run_w2_demo.sh
src/tc_datasynth/: __init__.py  arg_parser.py  component_catalog.py  main.py  service.py
src/tc_datasynth/access/: __init__.py  api_app.py  cli_app.py  components_app.py  preflight_app.py
src/tc_datasynth/api/: __init__.py
src/tc_datasynth/core/: __init__.py  config.py  context.py  logging.py  models.py  plan.py  planning.py  registrable.py  spec.py
src/tc_datasynth/core/llm/: __init__.py  chain.py  llm_factory.py  prompt_factory.py  robust_json_parser.py  structured_chain.py
src/tc_datasynth/io/: __init__.py  reader.py  writer.py
src/tc_datasynth/pipeline/: __init__.py  batching.py  components.py  progress.py  runner.py
src/tc_datasynth/pipeline/adapter/: __init__.py  base.py  types.py
src/tc_datasynth/pipeline/adapter/implements/: __init__.py  mock_pdf.py  mock_word.py  pdf_cpu.py  pdf_gpu.py
src/tc_datasynth/pipeline/adapters/: __init__.py  base.py  types.py
src/tc_datasynth/pipeline/adapters/implements/: __init__.py  mock_pdf.py  mock_word.py
src/tc_datasynth/pipeline/enhance/: __init__.py
src/tc_datasynth/pipeline/enhance/filter/: __init__.py  base.py
src/tc_datasynth/pipeline/enhance/filter/implements/: __init__.py  paper_text_filter.py  simple_chunk_filter.py  simple_text_filter.py
src/tc_datasynth/pipeline/enhance/mixin/: __init__.py  preflight.py
src/tc_datasynth/pipeline/gate/: __init__.py  base.py
src/tc_datasynth/pipeline/gate/implements/: __init__.py  simple_composite.py
src/tc_datasynth/pipeline/gates/: __init__.py
src/tc_datasynth/pipeline/generator/: __init__.py  base.py
src/tc_datasynth/pipeline/generator/implements/: __init__.py  concurrent_qa.py  mock_generator.py  simple_qa.py  structured_qa_support.py
src/tc_datasynth/pipeline/mixins/: __init__.py  batch.py
src/tc_datasynth/pipeline/parser/: __init__.py  base.py
src/tc_datasynth/pipeline/parser/implements/: __init__.py  concurrent_unified.py  simple_unified.py  unified_support.py
src/tc_datasynth/pipeline/planner/: __init__.py  base.py
src/tc_datasynth/pipeline/planner/implements/: __init__.py  simple_planner.py
src/tc_datasynth/pipeline/sampler/: __init__.py  base.py
src/tc_datasynth/pipeline/sampler/implements/: __init__.py  ga_sampler.py  simple_chunk.py
src/tc_datasynth/pipeline/validator/: __init__.py  base.py
src/tc_datasynth/pipeline/validator/implements/: __init__.py  evidence_validator.py  label_validator.py  simple_schema.py
src/tc_datasynth/reporting/: __init__.py  manifest_writer.py  report_writer.py
src/tc_datasynth/tools/: __init__.py  compare_runs.py
src/tc_datasynth/utilities/: __init__.py  dict_dataclass.py  tiny_tool.py
tests/: __init__.py  test_cli_runtime_mode.py  test_compare_runs.py  test_components_command.py  test_preflight_command.py  test_runtime_component_config.py  test_service_generator_backend.py  test_smoke_concurrent_generator.py  test_smoke_mock.py  test_smoke_planner.py  test_smoke_real_pdf_gpu_concurrent_parser.py  test_smoke_real_pdf_gpu_parser.py  test_smoke_real_pdf_parser.py
tests/adapter/: test_pdf_cpu.py  test_pdf_gpu.py
tests/fixtures/: advs.202415937-cpu.md  advs.202415937-gpu.md
tests/gate/: test_simple_composite_gate.py
tests/generator/: test_concurrent_qa_generator.py  test_simple_qa_generator.py
tests/llm/: __init__.py  test_chain.py  test_llm_factory_env.py  test_prompt_factory.py
tests/parser/: test_concurrent_unified_parser.py
tests/planner/: test_simple_planner.py
tests/reporting/: test_manifest_writer.py  test_report_writer.py
tests/sampler/: test_ga_sampler.py  test_simple_chunk_sampler.py
tests/validator/: test_evidence_validator.py  test_label_validator.py  test_simple_schema_validator.py
