[project]
authors = [{name = "王逸伟1", email = "1206182848@qq.com"}]
dependencies = ["loguru>=0.7.3,<0.8", "pydantic>=2.11,<3", "tqdm>=4.67.1,<5", "markitdown[pdf,docx,pptx]>=0.1.4,<0.2", "json-repair>=0.55.0,<0.56", "python-dotenv>=1.1.1,<2", "mineru>=3.0.1,<4"]
name = "TC-DataSynth"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.tasks]
clear-all = "bash ./scripts/clear-all.sh"

test = "python -m unittest"
test-smoke = "python -m unittest -v tests.test_smoke_mock"

main = "python -m tc_datasynth.main"
local = "python -m tc_datasynth.main local"
server = "python -m tc_datasynth.main server"
comp = "python -m tc_datasynth.main components"
preflight = "python -m tc_datasynth.main preflight"
compare-runs = "python -m tc_datasynth.tools.compare_runs"
w2-demo = "bash ./scripts/run_w2_demo.sh"

# 走真实的pdfs pixi run local --mode real --generator-backend mock --input-dir /path/to/pdfs
# 走完整链路：pixi run local --mode real --generator-backend simple_qa --llm-config configs/llm.toml --llm-model doubao-flash --input-dir /path/to/pdfs


test-local = "pixi run local --max-docs 1 --output-dir ./data/out/mock-run"
test-server = "pixi run server --port 8000"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]


[tool.pixi.feature.notebook.dependencies]
ipykernel = "*"
ipywidgets = "*" 


[tool.pixi.environments]
default = { solve-group = "default" }
notebook = {features = ["notebook"], solve-group = "default" }

[tool.pixi.pypi-dependencies]
tc_datasynth = { path = ".", editable = true }



[tool.pixi.dependencies]
python = "3.13.*"
tqdm = ">=4.67.1,<5"
loguru = ">=0.7.3,<0.8"
pydantic = ">=2.12.5,<3"
langchain = ">=1.2.6,<2"
langchain-openai = ">=1.1.7,<2"

[dependency-groups]
notebook = ["pymupdf>=1.26.7,<2", "pymupdf4llm>=0.2.9,<0.3"]
